--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,10 +10,10 @@ const { title } = Astro.props;
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="CaLEANdar Backend TEST" />
+		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+    <link rel="icon" href="/favicon.png" type="image/png">
 		<title>{title}</title>
 	</head>
 	<body>
@@ -34,8 +34,10 @@ const { title } = Astro.props;
 	}
 	html {
 		font-family: system-ui, sans-serif;
-		background: #13151a;
 	}
+  body {
+    margin: 0;
+  }
 	code {
 		font-family:
 			Menlo,
