--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,10 +10,10 @@ const { title } = Astro.props;
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="CaLEANdar Backend TEST" />
+		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+    <link rel="icon" href="/favicon.png" type="image/png">
 		<title>{title}</title>
 	</head>
 	<body>
@@ -21,21 +21,20 @@ const { title } = Astro.props;
 	</body>
 </html>
 <style is:global>
+
+	@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+	@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
+		--color-primary: #026C7A;
+		--font-montserrat: 'Montserrat', sans-serif;
 	}
 	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
+		font-family: var(--font-montserrat);
 	}
+  body {
+    margin: 0;
+  }
 	code {
 		font-family:
 			Menlo,
